# grace

./: .gitignore  Cargo.toml  LICENSE  README.md
skills/greet/: SKILL.md
src/: agent.rs  config.rs  default_skills.rs  delegate_tool.rs  diff.rs  error.rs  json.rs  lib.rs  main.rs  markdown.rs  memory.rs  message.rs  plugin_tool.rs  recall.rs  session.rs  settings.rs  skill.rs  skin.rs  tool.rs  tools.rs  transport.rs  transport_http.rs  transport_mock.rs  transport_openrouter.rs  transport_stream.rs
tests/: tools_integration.rs
