[package]
name = "grace"
version = "0.1.0"
edition = "2021"
description = "Minimal vendor-neutral ReAct agent core (Grace)"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Aman Garg"]

# Prefers official/native crates over hand-rolled reimplementations
# (reqwest for HTTP/TLS, serde/serde_json for JSON) instead of reinventing
# TCP/TLS/JSON parsing. See README for the rationale.

[lib]
name = "grace"
path = "src/lib.rs"

[[bin]]
name = "grace"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite (compiles its own copy, no system libsqlite3 dependency) with
# FTS5 for session search. Backs both durable memory and chat history.
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
toml = "0.8"
# Readline-style input (arrow-key history, line editing) for chat mode.
rustyline = "14"
# Terminal styling — anstyle is a modern, zero-alloc crate with NO_COLOR/CLICOLOR support.
# Replaces owo-colors; chosen for const-generic, allocation-free design and proper
# TTY detection. See https://rust-cli-recommendations.sunshowers.io/managing-colors-in-rust.html
anstyle = "1"
anstyle-query = "1"
# Unified diff generation for the patch tool's terminal output — same
# diffing engine used by ruff, difftastic-adjacent tooling. Avoids
# hand-rolling LCS/Myers diff.
similar = "2"
unicode-width = "0.2.2"
ctrlc = "3.5.2"
# Markdown rendering with syntax highlighting
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
